Fix Scatter Plot cutting of Points + Do Legend Left Align

--- a/src/examples/fullsize-examples/scatter-categorical/scatter-categorical.scss
+++ b/src/examples/fullsize-examples/scatter-categorical/scatter-categorical.scss
@@ -8,6 +8,12 @@
   //    overflow: visible;
   //  }
   //}
+  .legend {
+    align-items: flex-start;
+    .title {
+      margin: 0;
+    }
+  }
 }
 
 body {
