--- a/src/examples/fullsize-examples/scatter-continuous/scatter-continuous.scss
+++ b/src/examples/fullsize-examples/scatter-continuous/scatter-continuous.scss
@@ -2,6 +2,12 @@
   width: 100%;
   height: 75vh;
   min-height: 25rem;
+  .legend {
+    align-items: flex-start;
+    .title {
+      margin: 0;
+    }
+  }
 }
 
 body {
